<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/e_checkup_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_32sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/graphic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/the_art_of_medicine_consists_of_amusing_the_patient_while_nature_cures_the_disease"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/e_checkup_iv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/patientLoginBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32sdp"
            android:background="@drawable/round_corner_dark_blue_bg"
            android:paddingHorizontal="@dimen/_40sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/patient_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@id/doctorLoginBt"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doctorLoginBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_60sdp"
            android:background="@drawable/round_corner_dark_blue_bg"
            android:paddingHorizontal="@dimen/_40sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/doctor_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
