<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.healthit.application.ui.patient.dashboard.PatientMainViewModel" />

        <variable
            name="onItemClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/markPaidLottie"
            android:layout_width="0dp"
            android:layout_height="@dimen/_120sdp"
            app:layout_constraintBottom_toTopOf="@+id/markAsPaidTv"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:lottie_autoPlay="true"
            app:lottie_fileName="yellow_alert.json"
            app:lottie_loop="false"
            app:lottie_speed="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/markAsPaidTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mark_as_paid"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_18ssp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:fontFamily="@font/open_sans_bold"
            app:layout_constraintBottom_toTopOf="@id/tvMarkAsPaidDesc"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/markPaidLottie"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMarkAsPaidDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/mark_as_paid_desc"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toTopOf="@+id/yesBtn"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/markAsPaidTv"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/markAsPaidGroup"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvMarkAsPaidDesc,yesBtn,noBtn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@drawable/round_corner_dark_blue_bg"
            android:minHeight="@dimen/_36sdp"
            android:onClick="@{onItemClick}"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/noBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/round_corner_blue_border_bg"
            android:minHeight="@dimen/_36sdp"
            android:onClick="@{onItemClick}"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@id/yesBtn"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCrossTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.89" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>